syntax = "proto3";

option go_package = ".;protos";
package protos;

service DeviceConfigurator {
  rpc UpdateDeviceConfig(DeviceConfig) returns (ConfigResult);
}

message DeviceConfig {
  string configWiFi = 1;
}

message ConfigResult {
  string ack = 1;
}